--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -56,7 +56,7 @@
                    ایا اکانت خود را فراموش کرده اید?<a href="http://localhost:8080/register" >ثبت نام</a>
          </div>
          <div class="d-flex justify-content-center">
-              <a  href="http://localhost:8080/api/v2/registration/forget">فراموسی پسورد</a>
+              <a  href="http://localhost:8080/api/v2/registration/forget">فراموشی پسورد</a>
          </div>
      </div>
 </div>
