--- a/src/main/resources/templates/edite-user.html
+++ b/src/main/resources/templates/edite-user.html
@@ -60,7 +60,7 @@
 <div class="page-content">
     <div class="form-v10-content">
 
-            <form  onsubmit="return verifyPassword()"   class="form-detail"
+            <form    class="form-detail"
                    th:object="${user}"  action="#" th:action="@{/edite}" method="post" id="myform">
             <div class="form-left">
                 <h2>اطلاعات عمومی</h2>
@@ -105,7 +105,7 @@
             <div class="form-right">
                 <h2>اطلاعات کاربری</h2>
                 <div class="form-row">
-                    <input th:field="*{email}" disabled   required pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}" type="text" name="email" class="email" id="email" placeholder="کد پستی"  >
+                    <input th:field="*{email}" hidden   required pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}" type="text" name="email" class="email" id="email" placeholder="کد پستی"  >
                 </div>
                 <div class="form-row">
                     <!--  mohem-->
@@ -117,7 +117,7 @@
                 <div class="form-group">
                     <div class="form-row form-row-1">
                         <input
-                                pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" disabled
+                                pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" hidden
                                 title="Username should UpperCase, LowerCase, Number/SpecialChar and min 8 Chars"
                                 th:field="*{password}" type="hidden" name="pwd1" id="pwd1"  class="رمز عبور" placeholder="password"required >
                     </div>
@@ -128,18 +128,7 @@
 
                 <span class="select-btn"><i class="zmdi zmdi-chevron-down"></i></span>
 
-                <div class="form-row">
-                    <input type="hidden" disabled
-                           pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
-                           title="Username should UpperCase, LowerCase, Number/SpecialChar and min 8 Chars"
-                           name="pwd2" id="pwd2" class="pwd2"  placeholder="pwd2" required >
-                </div>
-                <div class="form-checkbox">
-                    <label class="container"><p>I do accept the <a href="#" class="text">Terms and Conditions</a> of your site.</p>
-                        <input type="checkbox" name="checkbox">
-                        <span class="checkmark"></span>
-                    </label>
-                </div>
+
                 <div class="form-row-last">
                     <input type="submit" name="register"    class="register" value="ثبت">
                 </div>
