--- a/src/main/resources/templates/issues/add-issue.html
+++ b/src/main/resources/templates/issues/add-issue.html
@@ -57,7 +57,7 @@
                 <th>
 
                     <div class="box">
-                    <input type="submit" value="شبت"   class="btn btn-white btn-animation-1"/>
+                    <input type="submit" value="ثبت"   class="btn btn-white btn-animation-1"/>
                     </div>
 
                 </th>
