--- a/src/main/resources/templates/report/main-report.html
+++ b/src/main/resources/templates/report/main-report.html
@@ -135,12 +135,6 @@
 
 
 
-
-
-
-
-
-<!--/////////////////////////////////////////////////////////////////////-->
 <div class="row">
     <div class="container"  >
         <table>
@@ -369,28 +363,18 @@
             </thead>
         </table>
 
-        <form
-                th:object="${tempClass}"
-                method="get"  >
+<!--        <form-->
+<!--                th:object="${tempClass}"-->
+<!--                method="get"  >-->
 
-            <input th:field="*{temp}" type="hidden"
-                   id="formember"  name="formember" required>
+<!--            <input th:field="*{temp}" type="hidden"-->
+<!--                   id="formember"  name="formember" required>-->
 
-        </form>
-
-
+<!--        </form>-->
 
 
-
-
-
-
-
-
-
-
-
-
+</div>
+</div>
 
 </body>
 </html>
